// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DailyReportHeaderが正しく表示される > レポートURLがある場合リンクとして表示される 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-i3pbo"
  >
    <div
      class="MuiBox-root css-cxlzap"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-1tlweu2-MuiTypography-root"
      >
        開発、会議、レビュー
      </h5>
    </div>
    <div
      class="MuiBox-root css-1qm1lh"
    >
      <a
        href="https://example.esa.io/posts/123"
        rel="noopener noreferrer"
        style="color: rgba(255, 255, 255, 0.7); text-decoration: none;"
        target="_blank"
      >
        6月19日(水)の日報
      </a>
    </div>
    <div
      class="MuiBox-root css-1ppihqm"
    />
    <p
      class="MuiTypography-root MuiTypography-body2 css-jyouah-MuiTypography-root"
    >
      5個のつぶやき
    </p>
  </div>
</DocumentFragment>
`;

exports[`DailyReportHeaderが正しく表示される > 編集可能モードで表示される 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-i3pbo"
  >
    <div
      class="MuiBox-root css-cxlzap"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-1tlweu2-MuiTypography-root"
      >
        開発、会議、レビュー
      </h5>
    </div>
    <div
      class="MuiBox-root css-1qm1lh"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-1voyyme-MuiTypography-root"
      >
        6月19日(水)の日報
      </p>
    </div>
    <div
      class="MuiBox-root css-1ppihqm"
    >
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault css-2mpvrf-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelMedium css-16cgrcw-MuiChip-label"
        >
          開発
        </span>
      </div>
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault css-2mpvrf-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelMedium css-16cgrcw-MuiChip-label"
        >
          times_esa
        </span>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body2 css-jyouah-MuiTypography-root"
    >
      5個のつぶやき
    </p>
  </div>
</DocumentFragment>
`;

exports[`DailyReportHeaderが正しく表示される > 読み取り専用モードで表示される 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-i3pbo"
  >
    <div
      class="MuiBox-root css-cxlzap"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-1tlweu2-MuiTypography-root"
      >
        開発、会議、レビュー
      </h5>
    </div>
    <div
      class="MuiBox-root css-1qm1lh"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-1voyyme-MuiTypography-root"
      >
        6月19日(水)の日報
      </p>
    </div>
    <div
      class="MuiBox-root css-1ppihqm"
    >
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault css-2mpvrf-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelMedium css-16cgrcw-MuiChip-label"
        >
          開発
        </span>
      </div>
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault css-2mpvrf-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelMedium css-16cgrcw-MuiChip-label"
        >
          times_esa
        </span>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body2 css-jyouah-MuiTypography-root"
    >
      5個のつぶやき
    </p>
  </div>
</DocumentFragment>
`;
